main.css
* { box-sizing: border-box; margin: 0; padding: 0; }

:root {
    --main-font: "Manrope", sans-serif;
    --main-color: #ffb3ff;
}


body {
    font-family: var(--main-font);
    line-height: 1.5;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background: #0c0d0e;
    opacity: 1 !important;
    color: #f8feff
}

main {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
}

.main-wrapper {
    position: relative;
    width: 66.6rem;
    margin: 50px auto;
}

.main-frame {
    background: #1a1c1d;
    width: 66.6rem;
    padding: 0.8rem;
    border-radius: 1rem;
    display: flex;
    flex-direction: column;
    gap: 0.8rem;
    border: 1px solid #ffb3ff;
    position: relative !important; 
    z-index: 1 !important;
}

.boykisser {
    display: block;
    position: absolute;
    width: 270px;
    top: -168px;
    left: 700px;
    z-index: 0; 
    cursor: pointer;
}

.boykisser img {
    width: 100%;
    height: auto;
    display: block;
}

.content-frame {
    display: flex;
    gap: 0 0.8rem;
    width: 100%;
}


.bio-frame {
    background: #151718;
    border-radius: 0.7rem;
    padding: 0.8rem;
    width: 23%;
}

.bio-frame img {
    margin-bottom: 0.4rem;
    width: 14rem;
    max-width: 100%;
    height: auto;
    border-radius: 10px;
    border: 1px solid #ffb3ff;
}

.bio-desc { 
    color: var(--main-color);
    font-weight: bold;
}

.sona-btn { 
    color: var(--main-color);
    font-weight: bold;
    display: block;
    margin-left: auto;
    width: fit-content;
    text-decoration: underline;
    cursor: pointer;
}

.social-frame {
    background: #151718;
    border-radius: 0.7rem;
    padding: 0.8rem;
    width: 77%;
    overflow-wrap: break-word;
    display: flex;
    flex-direction: column;
    gap: 0.8rem;
}

.misc-box {
    margin-top: 0.4rem;
    display: flex;
    flex-direction: row;
    gap: 1.5rem;
    justify-content: center;
}

.misc-box a {
    text-decoration: none;
    font-weight: bold;
    font-size: 16px;
    margin-top: 0.1rem;
}

.misc-button {
    color: #ffffff;
    display: inline-flex;
    align-items: center;
    gap: 0.2rem;
}

.misc-button svg {
    width: 1.1rem !important;
    height: 1.1rem !important;
    flex-shrink: 0;
    color: var(--main-color)
    /* transform: translateY(0px); */
}

.socials-box {
    display: flex;
    align-items: flex-start;
    gap: 4.7rem;
    margin-top: 10px;
    justify-content: center;
}

.socials-box h3 {
    grid-column: 1 / -1;
}

.socials-box svg {
    width: 32px;
    height: 32px;
}

.socials-box a {
    text-decoration: none;
    font-weight: bold;
    font-size: 18px;
    margin-top: 0.1rem;
}

.social-link {
    color: #ffffff;
    display: inline-flex;
    align-items: center;
    gap: 0.4rem;
}

.social-link svg {
    width: 1.2rem !important;
    height: 1.2rem !important;
    flex-shrink: 0;
    color: var(--main-color)
    /* transform: translateY(0px); */
}

.widget-frame {
    display: flex;
    width: 100%;
    justify-content: center;
    align-items: stretch;
    gap: 0.6rem;
    margin-top: auto;
}

.softwaremanager-box {
    display: flex;
    align-items: center;
    gap: 15px;
    padding: 11px;
    background-color: #1a1c1d;
    border-radius: 12px;
    width: fit-content;
    min-width: 320px;
    margin-top: 0.3rem;
}

.softwaremanager-box img {
    border-radius: 10px;
    width: 5rem;
    height: auto;
}

.softwaremanager-info {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.softwaremanager-title {
    margin: 0;
    color: #ffffff;
    font-size: 22px;
    font-weight: bold;
    color: var(--main-color);
    text-decoration: none;
}

.music-frame {
    margin-top: 0;
}

.music-box {
    display: flex;
    align-items: center;
    gap: 11px;
    padding: 11px;
    background-color: #1a1c1d;
    border-radius: 12px;
    width: fit-content;
    min-width: 320px;
    margin-top: 0.3rem;
}

.music-box img {
    border-radius: 10px;
    width: 5rem;
    height: auto;
}

.song-info {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.song-title {
    margin: 0;
    color: #ffffff;
    font-size: 22px;
}

.song-artist {
    margin: 0;
    color: var(--main-color);

}

.play-btn {
    background: none;
    border: none;
    color: var(--main-color);
    font-size: 24px;
    cursor: pointer;
}

.song-time {
    margin: 0;
    font-size: 11px;
    color: #888;
}

.progress-bar {
    height: 5px;
    background: #2e3032;
    border-radius: 4px;
    width: 100%;
    cursor: pointer;
    margin-top: 0.2rem;
    overflow: hidden;
}

.progress-fill {
    height: 100%; 
    width: 0%;
    background: var(--main-color);
    border-radius: 4px 0 0 4px;
    transition: width 0.25s linear;
}

.footer-frame {
    background: #151718;
    border-radius: 0.7rem;
    padding: 0.8rem;
    width: 100%;
}

.web-buttons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 4px;
}

.web-buttons a {
    display: block;
    line-height: 0;
}

.web-buttons img {
    border-radius: 6px;
}


.colored-text {
    color: var(--main-color);
}


.gallery {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    gap: 8px;
    min-width: 12rem;
    align-items: center;
}

.gallery a img {
    width: 100%;
    height: 200px;
    object-fit: cover;
    border-radius: 8px;
    display: block;
}

.gallery a video {
    width: 100%;
    height: 200px;
    object-fit: cover;
    border-radius: 8px;
    display: block;
}

.gallery-title {
    position: absolute;
    top: -50px;
    left: 140px;
    font-weight: bold;
}

::selection {
    background: #db65d528;
}


footer {
    color: #585858;
    font-family: var(--main-font);
    align-self: center;
    padding: 1rem;
    position: fixed;
    bottom: 0;
    user-select: none;
}

